--- a/WebsiteForms.html
+++ b/WebsiteForms.html
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-	<script src="index.js"></script>
-  </body>
+<html>
+	<head>
+		<link rel="stylesheet" href="FormCss.css">
+		
+		<title>HTML Form Example</title>
+	</head>
+	<body>
+		<h1>HTML Form Example<sub>By: Bin-Walid Marohombsar</sub></h1>
+		<form>
+	<div id="Person">
+		<fieldset>
+			<legend>Personal Information</legend>
+			<label for="name">Name:</label>
+			<input type="text" id="name" name="name" required>
+			<br>
+			<label for="email">Email:</label>
+			<input type="email" id="email" name="email" required>
+			<br>
+			<label for="phone">Phone:</label>
+			<input type="tel" id="phone" name="phone">
+			</form>
+		</fieldset>
+	</div>
+	<fieldset>
+		<legend>Gender</legend>
+		<input type="radio" id="male" name="gender" value="male" required>
+		<label for="male">Male</label>
+		<br>
+		<input type="radio" id="female" name="gender" value="female" required>
+		<label for="female">Female</label>
+		<br>
+		<input type="radio" id="other" name="gender" value="other" required>
+		<label for="other">Other</label>
+	</fieldset>
+
+	<fieldset>
+		<legend>Hobbies</legend>
+		<input type="checkbox" id="hobby1" name="hobbies" value="reading">
+		<label for="hobby1">Reading</label>
+		<br>
+		<input type="checkbox" id="hobby2" name="hobbies" value="music"> 
+		<label for="hobby2">Listening to Music</label>
+		<br> 
+		<input type="checkbox" id="hobby3" name="hobbies" value="sports">
+		<label for="hobby 1">Playing Sports</label>
+	</fieldset>
+
+	<fieldset>
+		<legend>Favorite Color</legend>
+		<select id="color" name="color" reuired>
+			<option value="">Select a color</option>
+			<option value="red">Red</option>
+			<option value="blue">Blue</option>
+			<option value="green">Green</option>
+			<option value="yellow">Yellow</option>
+		</select>
+	</fieldset>
+
+	<fieldset>
+		<legend>Comments</legend>
+		<textarea id="comments" name="comments" rows="4" cols="50"></textarea>
+	</fieldset>
+	
+	<fieldset>
+		<legend>Upload a file</legend>
+		<input type="file" id="file" name="File">
+	</fieldset>
+
+	<fieldset>
+		<legend>Date and Time</legend>
+		<label for="date">Date:</label>
+		<input type="date" id="date" name="date">
+		<br>
+		<label for="time">Time:</label> <input type="time" id="time" name="time">
+	</fieldset>
+
+	<fieldset>
+		<legend>Numerical Control</legend>
+		<label for="quantity">Quantity (between 1 and 10):</label>
+		<input type="number" id="quantity" name="quantity" min="1" max="10">
+	</fieldset>
+
+	<form>
+		<label for-"username">Username:</label>
+		<input type="text" id-"username" name="username">
+		<br><br>
+		<label for "password">Password:</label>
+		<input type="password" id-"password" name-"password">
+		<a href="#">Forgot Password?</a>
+		<br><br>
+		<button type="submit">Login</button>
+	</form>
 </html>
